feat: added validations to evaluation
