# swagger-output.json
@@ -351,16 +351,6 @@
         }
       }
     },
-    "/classroom/student-evaluation": {
-      "post": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
     "/formulario": {
       "get": {
         "tags": [
@@ -400,6 +390,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         },
         "requestBody": {
@@ -418,6 +411,39 @@
                     "example": "any"
                   },
                   "new_criterios": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/classroom/student-evaluation": {
+      "post": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "forms": {
+                    "example": "any"
+                  },
+                  "avaliacaoId": {
+                    "example": "any"
+                  },
+                  "alunoId": {
                     "example": "any"
                   }
                 }
